# rdma-opera

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: README.md  transport_daemon.md
script/: build.sh  config  hosts.config  ib_all_length.sh  install-tools.sh  mlnx5_setup.sh  mpi-launch.sh  opera-ll-traffic.sh  plot-opera-ll-traffic.py  process_mpi_result.py  process_result.py  pssh-launch.sh  pssh_launch.sh  pssh_node.sh  run_all_length.sh  setup-host.sh  setup-hpcx.sh
script/microbenchmark/: config  ib_all_length.sh  mpi-launch.sh  process_control_timing.py  pssh_launch.sh  pssh_node.sh  rdma_sync.sh  run_all_length.sh  run_control.sh
script/mpi/: mpi-launch.sh
script/opera/: opera-ll-traffic.sh  plot-opera-ll-traffic.py  run_opera_experiment.sh
src/: .gitignore  CMakeLists.txt  Makefile  config.h  dccs_config.h  dccs_parameters.h  dccs_rdma.h  dccs_utils.h  mpi_main.c  rdma_client.c  rdma_client.h  rdma_main.c  rdma_main.cc  rdma_server.c  rdma_server.h  utils.h
src/lambda/: CMakeLists.txt  dccs_config.h  dccs_parameters.h  dccs_rdma.h  dccs_utils.h  remote_lambda.c
src/lambda/examples/: CMakeLists.txt
src/microbenchmark/: CMakeLists.txt  control_main.c  dccs_config.h  dccs_parameters.h  dccs_rdma.h  dccs_utils.h  mpi_main.c  mpi_main.cc  rdma_main.c
